test_data/Xml/Unexpected/Unserializable/InvalidClassName/capability/wrong.xml.exception
Expected an element representing an instance of class Capability with element name capability, but got: utterlyInvalid at: the beginning